@startuml ej2
skinparam ClassBackgroundColor transparent
skinparam classAttributeIconSize 0 
skinparam ClassBorderThickness 1.3
skinparam ClassBorderColor Black
skinparam ArrowColor Black
skinparam shadowing false

interface FileOO2{
    -nombre: String
    -extension: String
    -permisos: String
    -tamanio: double
    -fechaCreacion: LocalDate
    +prettyPrint(): String
    +getters y setters()
}

class File implements FileOO2{
    +prettyPrint(): String
}


abstract FileDecorator implements FileOO2{
    +<<create>> FileDecorator(FileOO2 c)
    +prettyPrint(): String
}
FileOO2 <--o FileDecorator : #component
note "component.prettyPrint()" as N1
FileDecorator .u. N1

class DecoratorNombre extends FileDecorator{
    +prettyPrint(): String
}
note "super.prettyPrint(this.component.getAspectoAAplicar)" as N2
N2 .u. DecoratorNombre

class DecoratorExtension extends FileDecorator{
    +prettyPrint(): String
}

class DecoratorTamanio extends FileDecorator{
    +prettyPrint(): String
}

class DecoratorFechaCreacion extends FileDecorator{
    +prettyPrint(): String
}

class DecoratorFechaModificacion extends FileDecorator{
    +prettyPrint(): String
}

class DecoratorPermisos{
    +prettyPrint(): String
}
FileDecorator <|-l- DecoratorPermisos

@enduml